fixed picture position, added forms, added button, added picture credits

--- a/index.html
+++ b/index.html
@@ -4,12 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href = "styles.css">
 </head>
 <body>
     <div class="container">
-        <img class ="mountain" src="./picture.jpg">
+        <div class="imageContainer">
+            <img class ="mountain" src="./assets/picture.jpg">
+            <div id="imageText">ODIN</div>
+            <div class="credits">Photo by <a href="https://unsplash.com/@marcus_ganahl">Marcus Ganahl</a> on  
+                <a href ="https://unsplash.com/photos/a-snow-covered-mountain-with-a-body-of-water-in-the-foreground-8q6eFLyMeqU">Unsplash</a></p>
+            </div>
+        </div>
+        <div class ="aboutContainer">
+            <p>THIS IS NOT A REAL ONLINE SERVICE THIS IS AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA. ADD TEXT HERE, EMPHASIZE THIS WORD AND MAYBE ITALICIZE THIS ADD MORE WORDS
+                AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+            </p>
+        </div>
+        <div class =formContainer>
+            <form action ="" method ="post">
+                <p>LETS DO THIS</p>
+                <label for="first_name">FIRST NAME</label>
+                <input type="text" id="first_name" placeholder="First Name">
+                <label for="last_name">LAST NAME</label>
+                <input type="text" id="last_name" placeholder="Last Name">
+                <label for="email_address">EMAIL</label>
+                <input type="email" id="email_address" placeholder="email@email.com">
+                <label for="phone_number">PHONE NUMBER</label>
+                <input type="tel" id="phone_number" placeholder="+1234567890">
+                <label for="password">PASSWORD</label>
+                <input type="password" id="password">
+                <label for="password">CONFIRM PASSWORD</label>
+                <input type="password" id="password">
+            </form>
+        </div>
+        <div class ="signup">
+            <button type="submit" id="createButton">Create Account</button>
+            <p>Already have an account? <a href="">Log in</a></p>
+        </div>
     </div>
-    
 </body>
 </html>
 
