--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
                 <div class="passwordFields">
                     <div id="pass1Field">
                         <label for="password1">PASSWORD</label><br>
-                        <input type="password" id="password1" required>
+                        <input type="password" id="password1" placeholder="At least 8 characters" required minlength="8">
                     </div>
                     <div id="pass2Field">
                         <label for="password2">CONFIRM PASSWORD</label><br>
-                        <input type="password" id="password2" required>
+                        <input type="password" id="password2" placeholder="At least 8 characters" required minlength="8">
                     </div>
                 </div>
             </form>
